refactor: Remove commented out code and fix typo in index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,5 @@
         .col
           h1
             strong Lab Raycaster
-          //botton.btn.btn-danger(href='#',role='button', onclick='cameraSet()') Reset Camera
+          <!-- botton.btn.btn-danger(href='#',role='button', onclick='cameraSet()') Reset Camera -->
     .col
-
