--- a/index.html
+++ b/index.html
@@ -1,10 +1,28 @@
-.container-fluid.fixed-top.header.disable-selection
-  .row
-    .col
-    .col-md-6
-      .row
-        .col
-          h1
-            strong Lab Raycaster
-          <!-- botton.btn.btn-danger(href='#',role='button', onclick='cameraSet()') Reset Camera -->
-    .col
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Lab Raycaster</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/110/three.min.js"></script>
+    <script src="main.js" defer></script>
+</head>
+<body>
+    <div class="container-fluid fixed-top header disable-selection">
+        <div class="row">
+            <div class="col col-md-6">
+                <div class="row">
+                    <div class="col">
+                        <h1>
+                            <strong>Lab Raycaster</strong>
+                        </h1>
+                        <!-- Uncomment the following line if you want the Reset Camera button -->
+                        <!-- <button class="btn btn-danger" role="button" onclick="cameraSet()">Reset Camera</button> -->
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</body>
+</html>
