Fixed lab raycaster title

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <div class="row">
                     <div class="col">
                         <h1>
-                            <strong>Lab Raycaster</strong>
+                            <strong>Kevin Liu</strong>
                         </h1>
                         <!-- Uncomment the following line if you want the Reset Camera button -->
                         <!-- <button class="btn btn-danger" role="button" onclick="cameraSet()">Reset Camera</button> -->
