chore: Add developer section to index.html

--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
                         <!-- Uncomment the following line if you want the Reset Camera button -->
                         <!-- <button class="btn btn-danger" role="button" onclick="cameraSet()">Reset Camera</button> -->
                     </div>
+                    <div class="content">
+                        <h2>
+                            Developer
+                        </h2>
+                    </div>
+
                 </div>
             </div>
         </div>
