--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kevin Liu</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/110/three.min.js"></script>
     <script src="main.js" defer></script>
@@ -17,18 +18,39 @@
                         <h1>
                             <strong>Kevin Liu</strong>
                         </h1>
-                        <!-- Uncomment the following line if you want the Reset Camera button -->
-                        <!-- <button class="btn btn-danger" role="button" onclick="cameraSet()">Reset Camera</button> -->
-                    </div>
-                    <div class="content">
                         <h2>
                             Developer
                         </h2>
+                        <button class="btn btn-primary m-2" onclick="fetchData('sports')">Fetch Sports Data</button>
+                        <button class="btn btn-primary m-2" onclick="fetchData('racing')">Fetch Racing Data</button>
+                        <button class="btn btn-primary m-2" onclick="fetchData('jumpouts')">Fetch JumpOuts Data</button>
                     </div>
+                    <div class="content">
 
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+    <div id="data-output" class="container mt-5"></div>
+    <script>
+        function fetchData(type) {
+            let url = '';
+            if (type === 'sports') {
+                url = 'http://127.0.0.1:5000/fetch_sports';
+            } else if (type === 'racing') {
+                url = 'http://127.0.0.1:5000/fetch_racing';
+            } else if (type === 'jumpouts') {
+                url = 'http://127.0.0.1:5000/fetch_jumpouts';
+            }
+
+            fetch(url)
+                .then(response => response.json())
+                .then(data => {
+                    document.getElementById('data-output').innerText = JSON.stringify(data, null, 4);
+                })
+                .catch(error => console.error('Error fetching data:', error));
+        }
+    </script>
 </body>
 </html>
