--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/110/three.min.js"></script>
     <script src="main.js" defer></script>
+    <style>
+        pre {
+            background-color: #f8f9fa;
+            border: 1px solid #ddd;
+            padding: 15px;
+            border-radius: 5px;
+            overflow-x: auto;
+        }
+    </style>
 </head>
 <body>
     <div class="container-fluid fixed-top header disable-selection">
@@ -25,14 +34,14 @@
                         <button class="btn btn-primary m-2" onclick="fetchData('racing')">Fetch Racing Data</button>
                         <button class="btn btn-primary m-2" onclick="fetchData('jumpouts')">Fetch JumpOuts Data</button>
                     </div>
-                    <div class="content">
-
-                    </div>
                 </div>
             </div>
         </div>
     </div>
-    <div id="data-output" class="container mt-5"></div>
+    <div id="data-output" class="container mt-5">
+        <h3>API Data Output</h3>
+        <pre id="json-output">Click a button to fetch data...</pre>
+    </div>
     <script>
         function fetchData(type) {
             let url = '';
@@ -47,9 +56,13 @@
             fetch(url)
                 .then(response => response.json())
                 .then(data => {
-                    document.getElementById('data-output').innerText = JSON.stringify(data, null, 4);
+                    const formattedData = JSON.stringify(data, null, 4);
+                    document.getElementById('json-output').textContent = formattedData;
                 })
-                .catch(error => console.error('Error fetching data:', error));
+                .catch(error => {
+                    console.error('Error fetching data:', error);
+                    document.getElementById('json-output').textContent = "Error fetching data. Please try again.";
+                });
         }
     </script>
 </body>
